Fix z-index relationships and nav bar responsivity

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,7 @@
-/* * {
+* {
     transition: 0.5s;
     scroll-behavior: smooth;
-} */
-
-/* .alert-bubble {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #b9e2ad;
-    color: #303030;
-    padding: 20px;
-    text-align: center;
-    font-size: larger;
-} */
+}
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -50,7 +38,7 @@ h4 {
 }
 
 .button {
-    @apply rounded-md px-4 bg-rose-400 border border-rose-400  hover:bg-transparent hover:border hover:border-rose-500 hover:text-rose-500 text-slate-50 text-base transition cursor-pointer;
+    @apply rounded-md px-4 py-3 bg-rose-400 border border-rose-400  hover:bg-transparent hover:border hover:border-rose-500 hover:text-rose-500 text-slate-50 text-base transition cursor-pointer;
 }
 
 .form-container {
@@ -71,7 +59,7 @@ h4 {
 }
 
 .montserrat {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .success-isbn {
@@ -122,7 +110,7 @@ h4 {
     color: #ccc;
 }
 .rate:not(:checked) > label:before {
-    content: "★";
+    content: '★';
 }
 .rate > input:checked ~ label {
     color: #fb7185;
@@ -156,9 +144,13 @@ h4 {
 }
 
 .Stars::before {
-    content: "★★★★★";
+    content: '★★★★★';
     letter-spacing: 3px;
-    background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+    background: linear-gradient(
+        90deg,
+        var(--star-background) var(--percent),
+        var(--star-color) var(--percent)
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
